// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testFileUpload accepts label parameter 1`] = `
<lightning-file-upload>
  #shadow-root(open)
    <lightning-input
      class="slds-form-element"
    >
      #shadow-root(open)
        <span
          class="slds-assistive-text"
          data-aria="true"
        />
        <span
          class="slds-form-element__label"
          data-form-label="true"
          id="form-label-7"
        >
          Attachments
        </span>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-file-selector slds-file-selector_files"
          >
            <lightning-primitive-file-droppable-zone
              class="slds-file-selector__dropzone"
            >
              #shadow-root(open)
                <slot />
              <input
                aria-labelledby="form-label-7 file-selector-label-7"
                class="slds-file-selector__input slds-assistive-text"
                id="input-file-7"
                name="required name"
                type="file"
              />
              <label
                class="slds-file-selector__body"
                data-file-selector-label="true"
                for="input-file-7"
                id="file-selector-label-7"
              >
                <span
                  class="slds-file-selector__button slds-button slds-button_neutral"
                >
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_left"
                        data-key="upload"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#upload"
                        />
                      </svg>
                  </lightning-primitive-icon>
                  Upload Files
                </span>
                <span
                  class="slds-file-selector__text slds-medium-show"
                >
                  Or drop files
                </span>
              </label>
            </lightning-primitive-file-droppable-zone>
          </div>
        </div>
    </lightning-input>
</lightning-file-upload>
`;

exports[`testFileUpload accepts record Id parameter 1`] = `
<lightning-file-upload>
  #shadow-root(open)
    <lightning-input
      class="slds-form-element"
    >
      #shadow-root(open)
        <span
          class="slds-assistive-text"
          data-aria="true"
        />
        <span
          class="slds-form-element__label"
          data-form-label="true"
          id="form-label-23"
        >
          required label
        </span>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-file-selector slds-file-selector_files"
          >
            <lightning-primitive-file-droppable-zone
              class="slds-file-selector__dropzone"
            >
              #shadow-root(open)
                <slot />
              <input
                aria-labelledby="form-label-23 file-selector-label-23"
                class="slds-file-selector__input slds-assistive-text"
                id="input-file-23"
                name="required name"
                type="file"
              />
              <label
                class="slds-file-selector__body"
                data-file-selector-label="true"
                for="input-file-23"
                id="file-selector-label-23"
              >
                <span
                  class="slds-file-selector__button slds-button slds-button_neutral"
                >
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_left"
                        data-key="upload"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#upload"
                        />
                      </svg>
                  </lightning-primitive-icon>
                  Upload Files
                </span>
                <span
                  class="slds-file-selector__text slds-medium-show"
                >
                  Or drop files
                </span>
              </label>
            </lightning-primitive-file-droppable-zone>
          </div>
        </div>
    </lightning-input>
</lightning-file-upload>
`;

exports[`testFileUpload can accept multiple files 1`] = `
<lightning-file-upload>
  #shadow-root(open)
    <lightning-input
      class="slds-form-element"
    >
      #shadow-root(open)
        <span
          class="slds-assistive-text"
          data-aria="true"
        />
        <span
          class="slds-form-element__label"
          data-form-label="true"
          id="form-label-11"
        >
          required label
        </span>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-file-selector slds-file-selector_files"
          >
            <lightning-primitive-file-droppable-zone
              class="slds-file-selector__dropzone"
            >
              #shadow-root(open)
                <slot />
              <input
                aria-labelledby="form-label-11 file-selector-label-11"
                class="slds-file-selector__input slds-assistive-text"
                id="input-file-11"
                multiple=""
                name="required name"
                type="file"
              />
              <label
                class="slds-file-selector__body"
                data-file-selector-label="true"
                for="input-file-11"
                id="file-selector-label-11"
              >
                <span
                  class="slds-file-selector__button slds-button slds-button_neutral"
                >
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_left"
                        data-key="upload"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#upload"
                        />
                      </svg>
                  </lightning-primitive-icon>
                  Upload Files
                </span>
                <span
                  class="slds-file-selector__text slds-medium-show"
                >
                  Or drop files
                </span>
              </label>
            </lightning-primitive-file-droppable-zone>
          </div>
        </div>
    </lightning-input>
</lightning-file-upload>
`;

exports[`testFileUpload can be disabled 1`] = `
<lightning-file-upload>
  #shadow-root(open)
    <lightning-input
      class="slds-form-element"
    >
      #shadow-root(open)
        <span
          class="slds-assistive-text"
          data-aria="true"
        />
        <span
          class="slds-form-element__label"
          data-form-label="true"
          id="form-label-15"
        >
          required label
        </span>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-file-selector slds-file-selector_files"
          >
            <lightning-primitive-file-droppable-zone
              class="slds-file-selector__dropzone"
            >
              #shadow-root(open)
                <slot />
              <input
                aria-labelledby="form-label-15 file-selector-label-15"
                class="slds-file-selector__input slds-assistive-text"
                disabled=""
                id="input-file-15"
                name="required name"
                type="file"
              />
              <label
                class="slds-file-selector__body"
                data-file-selector-label="true"
                for="input-file-15"
                id="file-selector-label-15"
              >
                <span
                  class="slds-file-selector__button slds-button slds-button_neutral"
                >
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_left"
                        data-key="upload"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#upload"
                        />
                      </svg>
                  </lightning-primitive-icon>
                  Upload Files
                </span>
                <span
                  class="slds-file-selector__text slds-medium-show"
                >
                  Or drop files
                </span>
              </label>
            </lightning-primitive-file-droppable-zone>
          </div>
        </div>
    </lightning-input>
</lightning-file-upload>
`;

exports[`testFileUpload can take accept parameter to filter files 1`] = `
<lightning-file-upload>
  #shadow-root(open)
    <lightning-input
      class="slds-form-element"
    >
      #shadow-root(open)
        <span
          class="slds-assistive-text"
          data-aria="true"
        />
        <span
          class="slds-form-element__label"
          data-form-label="true"
          id="form-label-19"
        >
          required label
        </span>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-file-selector slds-file-selector_files"
          >
            <lightning-primitive-file-droppable-zone
              class="slds-file-selector__dropzone"
            >
              #shadow-root(open)
                <slot />
              <input
                accept=".jpg,.jpeg"
                aria-labelledby="form-label-19 file-selector-label-19"
                class="slds-file-selector__input slds-assistive-text"
                id="input-file-19"
                name="required name"
                type="file"
              />
              <label
                class="slds-file-selector__body"
                data-file-selector-label="true"
                for="input-file-19"
                id="file-selector-label-19"
              >
                <span
                  class="slds-file-selector__button slds-button slds-button_neutral"
                >
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_left"
                        data-key="upload"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#upload"
                        />
                      </svg>
                  </lightning-primitive-icon>
                  Upload Files
                </span>
                <span
                  class="slds-file-selector__text slds-medium-show"
                >
                  Or drop files
                </span>
              </label>
            </lightning-primitive-file-droppable-zone>
          </div>
        </div>
    </lightning-input>
</lightning-file-upload>
`;

exports[`testFileUpload default rendering 1`] = `
<lightning-file-upload>
  #shadow-root(open)
    <lightning-input
      class="slds-form-element"
    >
      #shadow-root(open)
        <span
          class="slds-assistive-text"
          data-aria="true"
        />
        <span
          class="slds-form-element__label"
          data-form-label="true"
          id="form-label-3"
        >
          required label
        </span>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-file-selector slds-file-selector_files"
          >
            <lightning-primitive-file-droppable-zone
              class="slds-file-selector__dropzone"
            >
              #shadow-root(open)
                <slot />
              <input
                aria-labelledby="form-label-3 file-selector-label-3"
                class="slds-file-selector__input slds-assistive-text"
                id="input-file-3"
                name="required name"
                type="file"
              />
              <label
                class="slds-file-selector__body"
                data-file-selector-label="true"
                for="input-file-3"
                id="file-selector-label-3"
              >
                <span
                  class="slds-file-selector__button slds-button slds-button_neutral"
                >
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_left"
                        data-key="upload"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#upload"
                        />
                      </svg>
                  </lightning-primitive-icon>
                  Upload Files
                </span>
                <span
                  class="slds-file-selector__text slds-medium-show"
                >
                  Or drop files
                </span>
              </label>
            </lightning-primitive-file-droppable-zone>
          </div>
        </div>
    </lightning-input>
</lightning-file-upload>
`;
